Güncelleme: Rapor eklendi.

--- a/app/templates/report/index.html
+++ b/app/templates/report/index.html
@@ -33,6 +33,22 @@
                         </div>
                     </div>
                     
+                    <div class="col-md-4 mb-3">
+                        <div class="card h-100">
+                            <div class="card-header">
+                                <h5>Proje Türü Raporu</h5>
+                            </div>
+                            <div class="card-body">
+                                <p>
+                                    Küçük istek projeleri ve normal projelerin detaylı listesi, toplam adam/gün kullanımı ve firma bilgileri ile birlikte.
+                                </p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="{{ url_for('report.projects_report') }}" class="btn btn-primary">Raporu Görüntüle</a>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <!-- Diğer özel raporlar için buraya daha fazla kart eklenebilir -->
                 </div>
             </div>
